--- a/README.adoc
+++ b/README.adoc
@@ -18,6 +18,7 @@ Automatic API generate plugin using swagger/OpenAPI v3 for grails4
 ----
 repositories {
   maven { url "https://dl.bintray.com/bobyang/plugins" }
+  // or jcenter()
 }
 dependencies {
   implementation 'swagger.grails4:swagger-grails4:0.0.1'
